--- a/src/components/UsersAccount/UsersAccount.css
+++ b/src/components/UsersAccount/UsersAccount.css
@@ -1370,7 +1370,7 @@
     content: '\27A5';
     font-size: 25px;
     position: absolute;
-    left: 50%;
+    left: 100%;
     top: -37%;
     cursor: pointer;
 }
@@ -1380,6 +1380,14 @@
     position: absolute;
     left: 0;
     top: -31%;
+    cursor: pointer;
+}
+.inventory-gold-reduce-btn::before {
+    content: '\2796';
+    font-size: 25px;
+    position: absolute;
+    left: 50%;
+    top: -37%;
     cursor: pointer;
 }
 .preview-character-inventory-item-popup-wrap {
