--- a/src/components/UsersAccount/UsersAccount.css
+++ b/src/components/UsersAccount/UsersAccount.css
@@ -2291,3 +2291,57 @@
 .add-character-money-controls-save-btn-wrap {
     margin-right: 10px;
 }
+.preview-character-eqip-main-row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    max-width: 200px;
+    margin-left: 20px;
+    margin-bottom: 20px;
+}
+.preview-character-eqip-btn-wrap {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    position: relative;
+}
+.preview-character-eqip-title {
+    margin-right: 10px;
+}
+.preview-character-eqip-btn::before {
+    content: '\2630';
+    cursor: pointer;
+    font-size: 22px;
+    position: absolute;
+    bottom: 25%;
+}
+.preview-character-eqip-popup-wrap {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    min-width: 400px;
+    max-width: 400px;
+    min-height: 400px;
+    background-color: gray;
+}
+.preview-character-eqip-popup-close-wrap {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    position: relative;
+    margin-bottom: 20px;
+}
+.preview-character-eqip-popup-close-btn::before {
+    content: '\274C';
+    font-size: 24px;
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    cursor: pointer;
+}
+.preview-character-eqip-popup-header,
+.preview-character-eqip-popup-body,
+.preview-character-eqip-popup-footer {
+    margin-bottom: 20px;
+}
