--- a/src/components/UsersAccount/UsersAccount.css
+++ b/src/components/UsersAccount/UsersAccount.css
@@ -2319,10 +2319,10 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    min-width: 400px;
-    max-width: 400px;
-    min-height: 400px;
+    min-width: 600px;
+    min-height: 800px;
     background-color: gray;
+    align-items: stretch;
 }
 .preview-character-eqip-popup-close-wrap {
     display: flex;
@@ -2344,4 +2344,115 @@
 .preview-character-eqip-popup-body,
 .preview-character-eqip-popup-footer {
     margin-bottom: 20px;
+}
+.equip-container-body {
+    background-position-y: 40%;
+    display: flex;
+    background-position-x: 70%;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    width: 100%;
+    background-image: url(../../../public/img/silhouette.jpeg);
+    background-repeat: no-repeat;
+}
+.equip-left-side {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 50%;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+.equip-right-side {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 50%;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+.visual-equip-item {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+.visual-equip-item-title {
+    display: flex;
+}
+.visual-equip-item-class {
+    background-color: gray;
+    color: white;
+}
+.visual-equip-item-body {
+    border: 1px solid;
+    min-width: 150px;
+    min-height: 50px;
+    background-color: white;
+}
+.visual-equip-item-name {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 30px;
+}
+
+.equip-head-wrap, 
+.equip-armor-wrap, 
+.equip-waist-wrap, 
+.equip-hands-wrap,
+.equip-feet-wrap,
+.equip-neck-wrap,
+.equip-weapon-wrap,
+.equip-arms-wrap,
+.equip-l-ring-wrap,
+.equip-r-ring-wrap {
+    margin-bottom: 15%;
+    position: relative;
+}
+.character-total-attributes-wrap {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    margin-bottom: 20px;
+}
+.character-total-attributes-left, .character-total-attributes-right {
+    width: 50%;
+    margin-bottom: 20px;
+}
+.inventory-wrap {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    border: 1px solid;
+    width: 100%;
+}
+.inventory-total {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    flex-direction: column;
+}
+.inventory-title {
+    background-color: gray;
+    min-height: 30px;
+    background-color: gray;
+    display: flex;
+    align-items: center;
+
+}
+.inventory-item {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    border-bottom: 1px;
+}
+.item-name, .item-type, .item-link {
+    display: flex;
+    align-items: center;
+    width: 33%;
+    min-height: 25px;
+    margin: 2px;
+    max-height: 30px;
 }
