--- a/src/components/UsersAccount/UsersAccount.css
+++ b/src/components/UsersAccount/UsersAccount.css
@@ -2622,3 +2622,145 @@
 .character-inventory-items-wrap button {
     cursor: pointer;
 }
+.character-equip-add-item-popup-wrap {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    min-width: 500px;
+    min-height: 400px;
+    background-color: gray;
+    border: 1px solid;
+    align-items: stretch;
+    position: absolute;
+    justify-content: space-around;
+    z-index: 6;
+}
+.character-equip-add-item-popup-close-btn-wrap {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    position: relative;
+    margin-bottom: 40px;
+}
+.character-equip-add-item-popup-close-btn::before {
+    content: '\274C';
+    font-size: 24px;
+    position: absolute;
+    top: 0px;
+    right: 20px;
+    cursor: pointer;
+}
+.character-equip-add-item-popup-body {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+.character-equip-item-search-wrap {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+}
+.character-equip-item-search-wrap input {
+    border: 1px solid;
+    margin: 0 5px;
+}
+.character-equip-item-types-row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 90%;
+    justify-content: center;
+    margin-bottom: 20px;
+    padding: 10px;
+}
+.character-equip-item-type {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 20%;
+    border: 1px solid;
+    margin-right: 10px;
+    padding: 2px;
+    cursor: pointer;
+    justify-content: center;
+    margin-bottom: 10px;
+}
+.character-equip-add-items-result-row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 90%;
+    margin-bottom: 20px;
+    padding: 10px;
+    justify-content: space-between;
+    overflow-y: scroll;
+    border: 1px solid;
+}
+.character-equip-add-item-wrap {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    min-width: 100px;
+    min-height: 75px;
+    border: 1px solid;
+    margin-bottom: 20px;
+    margin-right: 10px;
+}
+.character-equip-add-item-title {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
+}
+.character-equip-add-item-img-wrap {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    position: relative;
+}
+.character-equip-add-item-img-wrap img {
+    width: 100%;
+    height: 100%;
+    min-width: 100px;
+    max-width: 100px;
+    min-height: 75px;
+    object-fit: fill
+}
+.character-equip-add-item-controls-wrap {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 10px;
+    position: relative;
+}
+
+.character-equip-add-item-select-btn::before{
+    content: '\2795';
+    font-size: 20px;
+    position: absolute;
+    left: 10px;
+    top: -10%;
+    cursor: pointer;
+}
+.character-equip-add-item-info-btn::before {
+    right: 25%;
+    top: -5%;
+    position: absolute;
+    content: '\1F6C8';
+    max-width: 22px;
+    cursor: pointer;
+}
