--- a/src/components/UsersAccount/UsersAccount.css
+++ b/src/components/UsersAccount/UsersAccount.css
@@ -2630,6 +2630,7 @@
     min-height: 400px;
     background-color: gray;
     border: 1px solid;
+    padding: 10px 20px;
     align-items: stretch;
     position: absolute;
     justify-content: space-around;
@@ -2701,41 +2702,50 @@
     width: 90%;
     margin-bottom: 20px;
     padding: 10px;
-    justify-content: space-between;
+    justify-content: center;
     overflow-y: scroll;
-    border: 1px solid;
 }
 .character-equip-add-item-wrap {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    min-width: 100px;
-    min-height: 75px;
+    min-width: 120px;
+    max-width: 120px;
     border: 1px solid;
     margin-bottom: 20px;
-    margin-right: 10px;
+    margin-right: 20px;
+    justify-content: center;
+    align-items: center;
 }
 .character-equip-add-item-title {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
-    width: 100%;
+    justify-content: flex-start;
+    font-size: 14px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    text-align: center;
 }
 .character-equip-add-item-img-wrap {
     display: flex;
+    width: 120px;
+    max-height: 75px;
+    height: 75px;
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: center;
     position: relative;
+    margin-bottom: 10px;
 }
 .character-equip-add-item-img-wrap img {
     width: 100%;
     height: 100%;
     min-width: 100px;
     max-width: 100px;
-    min-height: 75px;
-    object-fit: fill
+    min-height: 100px;
+    max-height: 100px;
+    object-fit: fill;
 }
 .character-equip-add-item-controls-wrap {
     display: flex;
@@ -2743,8 +2753,9 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    width: 120px;
     padding: 10px;
+    margin: 10px 0;
     position: relative;
 }
 
