--- a/src/components/UsersAccount/UsersAccount.css
+++ b/src/components/UsersAccount/UsersAccount.css
@@ -2715,7 +2715,6 @@
     margin-bottom: 20px;
     margin-right: 20px;
     justify-content: center;
-    align-items: center;
 }
 .character-equip-add-item-title {
     display: flex;
@@ -2723,9 +2722,11 @@
     flex-wrap: wrap;
     justify-content: flex-start;
     font-size: 14px;
-    margin-bottom: 10px;
-    margin-top: 10px;
+    max-height: 20px;
+    margin-bottom: 20px;
     text-align: center;
+    overflow: hidden;
+    max-width: 100px;
 }
 .character-equip-add-item-img-wrap {
     display: flex;
@@ -2741,10 +2742,7 @@
 .character-equip-add-item-img-wrap img {
     width: 100%;
     height: 100%;
-    min-width: 100px;
-    max-width: 100px;
     min-height: 100px;
-    max-height: 100px;
     object-fit: fill;
 }
 .character-equip-add-item-controls-wrap {
@@ -2774,4 +2772,82 @@
     content: '\1F6C8';
     max-width: 22px;
     cursor: pointer;
+}
+.user-character-add-item-info-popup-wrap {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    padding: 10px;
+    max-width: 500px;
+    min-height: 400px;
+    position: absolute;
+    background-color: gray;
+    z-index: 6;
+    border: 1px solid;
+}
+.user-character-add-item-info-popup-close-wrap {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+}
+.user-character-add-item-info-popup-close-btn::before{
+    content: '\274C';
+    font-size: 24px;
+    position: absolute;
+    top: 0px;
+    right: 20px;
+    cursor: pointer;
+}
+.user-character-add-item-info-popup-body {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+.user-character-add-item-info-popup-title {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    max-height: 20px;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+.user-character-add-item-info-parametrs-row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: space-around;
+    align-items: center;
+    margin-bottom: 20px;
+    padding: 10px;
+}
+.user-character-add-item-info-parametrs {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 40%;
+    margin-right: 10px;
+}
+.user-character-add-item-info-image {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 40%;
+    border: 1px solid;
+}
+.user-character-add-item-info-image img {
+    min-height: 200px;
+    min-width: 200px;
+}
+.user-character-add-item-info-description {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    padding: 10px;
+    text-align: left;
 }
