--- a/src/components/UsersAccount/UsersAccount.css
+++ b/src/components/UsersAccount/UsersAccount.css
@@ -2678,16 +2678,18 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    width: 90%;
+    width: 100%;
     justify-content: center;
     margin-bottom: 20px;
     padding: 10px;
+    max-width: 400px;
 }
 .character-equip-item-type {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     width: 20%;
+    max-width: 200px;
     border: 1px solid;
     margin-right: 10px;
     padding: 2px;
